--- a/Login/login.html
+++ b/Login/login.html
@@ -24,11 +24,11 @@
         <div class="lower-part">
         <div class="remember-forgot">
             <label><input type="checkbox"> Remember me ?</label>
-            <a href="/Landing page/forget password/forget.html">Forgot password</a>
+            <a href="/forget password/forget.html">Forgot password</a>
         </div>
         <button type="submit" class="btn">Login</button>
         <div class="register-link">
-            <p>Don't have an account ?<a href="/Landing page/registeration/reg.html"> Register</a></p>
+            <p>Don't have an account ?<a href="/registeration/reg.html"> Register</a></p>
         </div>
         </div>
         </form>
