--- a/forget password/forget.html
+++ b/forget password/forget.html
@@ -28,7 +28,7 @@
         </div>
             <label for="submit" id="inputbox"></label>
             <button id="submit">Send a link</button>
-            <p>Back to <a href="/Landing page/land.html">Homepage</a></p>
+            <p>Back to <a href="/land.html">Homepage</a></p>
         </form>
        
     </div>
