--- a/land.html
+++ b/land.html
@@ -13,7 +13,7 @@
             <ul>
                 <li><a href="Login/login.html" target="_blank">Log in</a></li>
                 <li><a href="registeration/reg.html" target="_blank">Registeration</a></li>
-                <li><a href="/Landing page/forget password/forget.html">Forgot password</a></li>
+                <li><a href="/forget password/forget.html">Forgot password</a></li>
                 <li><a href="">Reset Password</a></li>
             </ul>
         </nav>
