--- a/registeration/reg.html
+++ b/registeration/reg.html
@@ -45,8 +45,8 @@
                 <label for="others">72 Other</label>
             </div>
             <button name="form" value="Submit">Submit</button>
-            <a class="back" href="/Landing page/Login/login.html">Back to login </a></p>
-            <a class="back" href="/Landing page/land.html">Back to homepage</a></p>
+            <p> Back to<a class="back" href="/Login/login.html">Login</a></p>
+           <p> Back to<a class="back" href="/land.html">Homepage</a></p>
         </form>
        
     </div>
